[package]
name = "zerokv-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for zerokv (zero-copy derive)"

[lib]
# A procedural-macro crate is compiled into a compiler plugin (`proc-macro = true`).
# It runs *at compile time* of the downstream crate, so it cannot share runtime
# code with `zerokv`; it only emits tokens.
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
